[gd_scene load_steps=9 format=3 uid="uid://cqfsr6yjn6hm8"]

[ext_resource type="Script" path="res://scripts/menus/home_menu/home_menu.gd" id="1_dvove"]
[ext_resource type="Texture2D" uid="uid://dbhkk633ispub" path="res://assets/buttons/Bouton Bleu@2x.png" id="3_0g4o3"]
[ext_resource type="Texture2D" uid="uid://bsir4xrig5yqd" path="res://assets/icons/LogoChatVertFonce.png" id="3_gislx"]
[ext_resource type="Texture2D" uid="uid://c2pj8fxbv5usu" path="res://assets/icons/LogoTypoBlancTransp.png" id="4_aa1tm"]
[ext_resource type="Theme" uid="uid://dr31fy67cgji3" path="res://assets/resources/themes/generic.tres" id="4_ay1j5"]
[ext_resource type="Texture2D" uid="uid://cdaralngqjlvk" path="res://assets/buttons/Bouton Vert@2x.png" id="5_db01i"]

[sub_resource type="Gradient" id="Gradient_p68sa"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0.0122449, 1)
colors = PackedColorArray(0.180392, 0.478431, 0.482353, 1, 0.137255, 0.215686, 0.223529, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fm0i7"]
gradient = SubResource("Gradient_p68sa")
width = 1024
height = 1024
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0)

[node name="HomeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvove")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_fm0i7")
expand_mode = 1

[node name="MonogramTextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.352941)
texture_filter = 6
layout_mode = 2
offset_left = -238.0
offset_top = -321.0
offset_right = 990.0
offset_bottom = 912.0
texture = ExtResource("3_gislx")
expand_mode = 2
stretch_mode = 4

[node name="CopyrightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -28.0
offset_right = 30.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource("4_ay1j5")
theme_override_font_sizes/font_size = 15
text = "HOME.COPYRIGHT"
vertical_alignment = 2

[node name="GuiMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="GuiHBoxContainer" type="HBoxContainer" parent="GuiMarginContainer"]
layout_mode = 2

[node name="LogoTextureRect" type="TextureRect" parent="GuiMarginContainer/GuiHBoxContainer"]
texture_filter = 6
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_aa1tm")
expand_mode = 3
stretch_mode = 5

[node name="HomeScreenVBoxContainer" type="VBoxContainer" parent="GuiMarginContainer/GuiHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayMarginContainer" type="MarginContainer" parent="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 40

[node name="PlayButton" type="TextureButton" parent="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer/PlayMarginContainer"]
texture_filter = 6
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_0g4o3")
ignore_texture_size = true
stretch_mode = 5

[node name="PlayLabel" type="Label" parent="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer/PlayMarginContainer/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ay1j5")
theme_override_colors/font_color = Color(0.137255, 0.215686, 0.223529, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.215686, 0.223529, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 65
text = "HOME.PLAY.BUTTON"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SettingsMarginContainer" type="MarginContainer" parent="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 50

[node name="SettingsButton" type="TextureButton" parent="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer/SettingsMarginContainer"]
texture_filter = 6
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("5_db01i")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsLabel" type="Label" parent="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer/SettingsMarginContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_ay1j5")
theme_override_colors/font_color = Color(0.137255, 0.215686, 0.223529, 1)
theme_override_colors/font_outline_color = Color(0.137255, 0.215686, 0.223529, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 35
text = "HOME.SETTINGS.BUTTON"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="pressed" from="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer/PlayMarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="GuiMarginContainer/GuiHBoxContainer/HomeScreenVBoxContainer/SettingsMarginContainer/SettingsButton" to="." method="_on_parameter_button_pressed"]
